--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -4,7 +4,7 @@
 +ActiveClassRedirects=(OldClassName="TP_BlankGameModeBase",NewClassName="House_TestGameModeBase")
 
 [/Script/Engine.RendererSettings]
-r.MobileHDR=True
+r.MobileHDR=False
 r.Mobile.DisableVertexFog=True
 r.Shadow.CSM.MaxMobileCascades=2
 r.MobileMSAA=1
@@ -39,14 +39,14 @@ r.DistanceFieldBuild.EightBit=False
 r.GenerateLandscapeGIData=False
 r.DistanceFieldBuild.Compress=False
 r.TessellationAdaptivePixelsPerTriangle=48.000000
-r.SeparateTranslucency=True
+r.SeparateTranslucency=False
 r.TranslucentSortPolicy=0
 TranslucentSortAxis=(X=0.000000,Y=-1.000000,Z=0.000000)
 r.CustomDepth=1
 r.CustomDepthTemporalAAJitter=True
 r.PostProcessing.PropagateAlpha=0
-r.DefaultFeature.Bloom=True
-r.DefaultFeature.AmbientOcclusion=True
+r.DefaultFeature.Bloom=False
+r.DefaultFeature.AmbientOcclusion=False
 r.DefaultFeature.AmbientOcclusionStaticFraction=True
 r.DefaultFeature.AutoExposure=False
 r.DefaultFeature.AutoExposure.Method=0
@@ -109,7 +109,7 @@ r.LightPropagationVolume=False
 EditorStartupMap=/Game/Maps/Main.Main
 LocalMapOptions=
 TransitionMap=None
-bUseSplitscreen=True
+bUseSplitscreen=False
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
@@ -121,12 +121,112 @@ GlobalDefaultGameMode=/Script/Engine.GameModeBase
 GlobalDefaultServerGameMode=None
 
 [/Script/Slate.SlateSettings]
-bExplicitCanvasChildZOrder=False
+bExplicitCanvasChildZOrder=True
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
-TargetedHardwareClass=Desktop
-AppliedTargetedHardwareClass=Desktop
+TargetedHardwareClass=Mobile
+AppliedTargetedHardwareClass=Mobile
 DefaultGraphicsPerformance=Scalable
 AppliedDefaultGraphicsPerformance=Scalable
+
+[/Script/AndroidRuntimeSettings.AndroidRuntimeSettings]
+PackageName=com.TTK.[PROJECT]
+StoreVersion=1
+StoreVersionOffsetArmV7=0
+StoreVersionOffsetArm64=0
+StoreVersionOffsetX8664=0
+ApplicationDisplayName=
+VersionDisplayName=1.0
+MinSDKVersion=24
+TargetSDKVersion=24
+InstallLocation=InternalOnly
+bEnableGradle=True
+bEnableLint=False
+bPackageDataInsideApk=False
+bCreateAllPlatformsInstall=False
+bDisableVerifyOBBOnStartUp=True
+bAllowLargeOBBFiles=False
+bAllowPatchOBBFile=False
+bUseExternalFilesDir=False
+bPublicLogFiles=True
+Orientation=Landscape
+MaxAspectRatio=2.100000
+bUseDisplayCutout=False
+bRestoreNotificationsOnReboot=False
+bFullScreen=True
+bEnableNewKeyboard=True
+DepthBufferPreference=Default
+bValidateTextureFormats=True
+ExtraApplicationSettings=
+ExtraActivitySettings=
+bAndroidVoiceEnabled=False
+bRemoveOSIG=False
++GoogleVRCaps=Cardboard
+bGoogleVRSustainedPerformance=True
+KeyStore=
+KeyAlias=
+KeyStorePassword=
+KeyPassword=
+bBuildForArmV7=True
+bBuildForArm64=True
+bBuildForX8664=False
+bBuildForES2=True
+bBuildForES31=True
+bSupportsVulkan=False
+bDetectVulkanByDefault=True
+bBuildWithHiddenSymbolVisibility=False
+bSaveSymbols=False
+bEnableGooglePlaySupport=False
+bUseGetAccounts=False
+GamesAppID=
+bEnableSnapshots=False
+bSupportAdMob=True
+AdMobAdUnitID=
+GooglePlayLicenseKey=
+GCMClientSenderID=
+bShowLaunchImage=True
+bAllowIMU=True
+bAllowControllers=True
+bBlockAndroidKeysOnControllers=False
+AndroidAudio=Default
+AudioSampleRate=44100
+AudioCallbackBufferFrameSize=1024
+AudioNumBuffersToEnqueue=4
+AudioMaxChannels=0
+AudioNumSourceWorkers=0
+SpatializationPlugin=
+ReverbPlugin=
+OcclusionPlugin=
+CompressionOverrides=(bOverrideCompressionTimes=False,DurationThreshold=5.000000,MaxNumRandomBranches=0,SoundCueQualityIndex=0)
+ChunkSizeKB=0
+bUseAudioStreamCaching=False
+CacheSizeKB=0
+bResampleForDevice=False
+SoundCueCookQualityIndex=-1
+MaxSampleRate=0.000000
+HighSampleRate=0.000000
+MedSampleRate=0.000000
+LowSampleRate=0.000000
+MinSampleRate=0.000000
+CompressionQualityModifier=0.000000
+AutoStreamingThreshold=0.000000
+AndroidGraphicsDebugger=None
+MaliGraphicsDebuggerPath=(Path="")
+bMultiTargetFormat_ETC1=True
+bMultiTargetFormat_ETC1a=True
+bMultiTargetFormat_ETC2=True
+bMultiTargetFormat_DXT=True
+bMultiTargetFormat_PVRTC=True
+bMultiTargetFormat_ATC=True
+bMultiTargetFormat_ASTC=True
+TextureFormatPriority_ETC1=0.100000
+TextureFormatPriority_ETC1a=0.150000
+TextureFormatPriority_ETC2=0.200000
+TextureFormatPriority_DXT=0.600000
+TextureFormatPriority_PVRTC=0.800000
+TextureFormatPriority_ATC=0.500000
+TextureFormatPriority_ASTC=0.900000
+SDKAPILevelOverride=
+NDKAPILevelOverride=
 
 
